@@ -15,6 +15,9 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk): 
 ---------------------------- 
 
+- Union layer: fix for the failure if one or more of the source layers 
+  are not in the current extent (#3858)
+
 - Fix memory leak in msResampleGDALToMap() (#3857)
 
 - Fix missing initialization of default formats in WCS 1.x.
